fix: correct spacing of icon before texts

--- a/project/parttofe/partto/src/components/ListItem/ListItem.module.scss
+++ b/project/parttofe/partto/src/components/ListItem/ListItem.module.scss
@@ -1,6 +1,7 @@
 @import "../../App.scss";
 
 .precursor {
+  padding-top: var(--gap-small);
   animation: popout var(--animation-tempo);
 }
 
