--- a/project/parttofe/partto/src/components/Title/Title.module.scss
+++ b/project/parttofe/partto/src/components/Title/Title.module.scss
@@ -11,5 +11,6 @@
 }
 
 .text {
+  padding-top: var(--gap-small);
   animation: fadein var(--animation-tempo);
 }
